--- a/package.json
+++ b/package.json
@@ -28,6 +28,14 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.10.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "karma": "^0.13.22",
+    "karma-jasmine": "^0.3.7",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "leaflet": "^0.7.7",
+    "phantomjs-prebuilt": "^2.1.5"
+  },
+  "scripts": {
+    "test": "./node_modules/.bin/karma start ./spec/karma.conf.js"
   }
 }
