--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "./node_modules/.bin/karma start ./spec/karma.conf.js"
+    "test": "./node_modules/.bin/karma start ./spec/karma.conf.js",
+    "start": "./node_modules/.bin/http-server"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "homepage": "https://github.com/mejackreed/Leaflet-IIIF",
   "devDependencies": {
+    "http-server": "^0.9.0",
     "jasmine": "^2.4.1",
     "karma": "^0.13.22",
     "karma-jasmine": "^0.3.7",
