--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "http-server": "^0.9.0",
     "jasmine": "^2.5",
-    "jquery": "^2.2.2",
+    "jquery": "~> 3.0.0",
     "karma": "^1.3",
     "karma-jasmine": "^1.0",
     "karma-phantomjs-launcher": "^1.0.0",
