--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "jasmine": "^2.5",
     "jquery": "~> 3.0.0",
     "karma": "^1.3",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^1.0",
-    "karma-phantomjs-launcher": "^1.0.0",
     "leaflet": "^1.0",
-    "phantomjs-prebuilt": "^2.1.5"
+    "puppeteer": "^1.20.0"
   }
 }
