--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
-sudo: false
 language: node_js
-node_js: 'node'
+
+node_js:
+  - 'lts/*'
+
+before_script:
+  - npm install
+
+script:
+  - npm test
