--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "leaflet-iiif",
-  "version": "3.0.0",
+  "version": "3.1.0-alpha.1",
   "description": "A Leaflet plugin for viewing IIIF sources",
-  "main": "leaflet-iiif.js",
+  "main": "dist/leaflet-iiif.js",
+  "module": "dist/leaflet-iiif.esm.js",
   "directories": {
     "example": "examples"
   },
@@ -10,6 +11,7 @@
     "leaflet-iiif.js"
   ],
   "scripts": {
+    "prepare": "rollup --config rollup.conf.js --sourcemap && ESM=true rollup --config rollup.conf.js --sourcemap",
     "test": "./node_modules/.bin/karma start ./spec/karma.conf.js",
     "start": "./node_modules/.bin/http-server"
   },
@@ -35,7 +37,10 @@
     "karma": "^1.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^1.0",
-    "leaflet": "^1.0",
-    "puppeteer": "^1.20.0"
+    "puppeteer": "^1.20.0",
+    "rollup": "^3.18.0"
+  },
+  "dependencies": {
+    "leaflet": "^1.9"
   }
 }
